--- a/src/components/testimonials/testimonials.scss
+++ b/src/components/testimonials/testimonials.scss
@@ -1,91 +1,136 @@
 @import "../../global.scss";
 .testimonials{
     background-color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
+    overflow-y: hidden;
     
-    .card{
-        position: relative;
-        width: 600px;
-        height: 350px;
-        background:white;
-        border-radius: 20px;
+
+    .heading{
         display: flex;
+        justify-content: center;
         align-items: center;
-        transition: 0.5s;
+        margin-top: 20px;
 
-        .circle{
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            border-radius: 20px;
-            overflow: hidden;
-        }
+        @include mobile{
+            margin-top: 40px;
 
-        .circle::before{
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: crimson;
-            clip-path: circle(120px at center);
-            transition: 0.5s;
-
-        }
-
-        .circle:hover:before{
-            clip-path: circle(400px at center);
-            background:  $mainColor;
-        }
-
-        img{
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            height: 200px;
-            pointer-events: none;
-            transition: 0.5s;
-        }
-
-        &:hover {
-            overflow-y: hidden;
-            img{
-                left: 72%;
-                height: 220px;
-            }
-
-            .content{
-                h6,p{
-                    color: white;
-                }
-                
-            }
-        }
-
-        .content{
-            @include mobile{
+            h1{
                 font-size: 10px;
             }
-            @include iphone8{
-                font-size: 10px;
-            }
-            position: relative;
-            width: 50%;
-            color: transparent;
-            padding: 10px 10px;
-            transition: 0.5s;
-            left: 5%;
-            
-
         }
 
-        
+        @include iphone8{
+            margin-top: 40px;
+
+            h1{
+                font-size: 10px;
+            }
+        }
+       
+        h1{
+            font-size: 30px;
+        }
     }
+    
+
+    .container{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        min-height: 100vh;
+
+        @include mobile{
+            min-height: 50vh;
+        }
+
+        @include iphone8{
+            min-height: 50vh;
+        }
+
+        .card{
+            position: relative;
+            width: 600px;
+            height: 350px;
+            background:white;
+            border-radius: 20px;
+            display: flex;
+            align-items: center;
+            transition: 0.5s;
+    
+            .circle{
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                border-radius: 20px;
+                overflow: hidden;
+            }
+    
+            .circle::before{
+                content: '';
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                background: crimson;
+                clip-path: circle(120px at center);
+                transition: 0.5s;
+    
+            }
+    
+            .circle:hover:before{
+                clip-path: circle(400px at center);
+                background:  $mainColor;
+            }
+    
+            img{
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+                height: 200px;
+                pointer-events: none;
+                transition: 0.5s;
+            }
+    
+            &:hover {
+                overflow-y: hidden;
+                img{
+                    left: 72%;
+                    height: 220px;
+                }
+    
+                .content{
+                    h6,p{
+                        color: white;
+                    }
+                    
+                }
+            }
+    
+            .content{
+                @include mobile{
+                    font-size: 10px;
+                }
+                @include iphone8{
+                    font-size: 10px;
+                }
+                position: relative;
+                width: 50%;
+                color: transparent;
+                padding: 10px 10px;
+                transition: 0.5s;
+                left: 5%;
+                
+    
+            }
+    
+            
+        }
+
+
+    }
+    
+    
 }
